# license-logic

./: LICENSE  README.md  pyproject.toml
.github/workflows/: pytest.yml  ruff.yml  spdx.yml
src/license_logic/: __init__.py  __main__.py  _tseitin.py  cli.py  formula.py  normal_forms.py  sat.py  spdx.py
tests/: test_normal_forms.py  test_sat.py  test_spdx.py
